--- a/frontend_v2/assets/css/tailwind.css
+++ b/frontend_v2/assets/css/tailwind.css
@@ -20,12 +20,12 @@ body::before {
  
   .dark {
     --background: #1d1d1d;
-    --header-background: #ef5552;
+    --header-background: #3fc38a;
     --footer-background: #1f1f1f;
     --button-color-primary: #2c2c2c;
     --button-color-hover-primary: #333333;
-    --button-color-danger: #ef5552;
-    --button-color-danger-hover: #c74f4d;
+    --button-color-danger: #3fc38a;
+    --button-color-danger-hover: #3fc38a;
     --input-background: #2f2f2f;
     --card-background: #252526;
 
